force-app/main/default/objects/Opportunity/fields/Completed_Task__c.field-meta.xml
<CustomField>
    <fullName>Completed_Task__c</fullName>
    <description>Number of completed Tasks related to this Opportunity (maintained by TaskTrigger).</description>
    <label>Completed Task</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>