force-app/main/default/objects/Opportunity/fields/Reseller_Email__c.field-meta.xml
<CustomField>
    <fullName>Reseller_Email__c</fullName>
    <description>Email of the reseller submitting this Opportunity; matched against Reseller company emails.</description>
    <label>Reseller Email</label>
    <type>Email</type>
</CustomField>