force-app/main/default/objects/Opportunity/fields/Score__c.field-meta.xml
<CustomField>
    <fullName>Score__c</fullName>
    <description>Total number of Tasks related to this Opportunity (maintained by TaskTrigger).</description>
    <label>Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>